2006-07-20  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/widget.hg: Fixed a typo for input_shape_combine_mask(),
	to wrap the right GTK method.

2006-07-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.ccg:
 	* gtk/src/entrycompletion.ccg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/widget.ccg: Put custom default signal handlers in #ifdefs so that 
	gtkmm builds when --enable-api-default-signal-handlers was used with glibmm.

2006-07-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/spinbutton.hg: Wrap the new wrapped signal, without 
	a default handler because that would break ABI.

2006-07-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/*: reverted changes to includes in example programs

2.9.8:

2006-07-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/textbuffer.ccg:
	* gtk/src/textbuffer.hg: Wrapped some of the functions from gtktextbufferrichtext.h, 
	but left some of it commented-out while I discover how it should work, to avoid 
	creating a bad API that we can not change later.

2006-07-10  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* gtk/src/widget.ccg:
	* gtk/src/widget.hg: wrapped is_composited(), composited_changed signal,
	input_shape_combine_mask(), unset_input_shape_combine_mask()

2006-07-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Update links, because inserting the printing chapter increased 
	subsequent chapter numbers. 
	* docs/tutorial/gtkmm-tut.xml: Wrapping C libraries: Mentioned _WRAP_ENUM().
	* gtk/src/togglebutton.ccg:
	* gtk/src/togglebutton.hg: Added a constructor that takes a stock item, like 
	Button already has.

2006-07-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Minor corrections to the language in the 
	new printing chapter.

2006-07-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: gmmproc appendix: Corrected the description of 
	the _DEFS() macro, and mention not to include C headers in C++ headers.
