@@ -135,8 +135,7 @@ void PrintFormOperation::on_draw_page(const Glib::RefPtr<Gtk::PrintContext>& pri
       cairo_ctx->move_to(logical_rect.get_x() / 1024.0,
                          baseline / 1024.0 - start_pos);
 
-      //TODO: Use the C++ method when it's wrapped
-      pango_cairo_show_layout_line(cairo_ctx->cobj(), layout_line->gobj());
+      layout_line->show_in_cairo_context(cairo_ctx);
     }
 
     line_index++;
@@ -185,13 +184,7 @@ bool PrintFormOperation::on_preview(
   g_debug("pfo::on_preview");
 
   //Use our custom preview dialog:
-  //TODO: Isn't there a default preview dialog?
-  //Maybe we could just mention custom preview dialogs in the book, or put it in an "advanced" example.
-  PreviewDialog dialog(preview,
-                   property_n_pages().get_value(),
-                   context,
-                   m_refLayout,
-                   *parent);
+  PreviewDialog dialog(preview, property_n_pages().get_value(), context, m_refLayout, *parent);
   dialog.run();
 
   g_debug("emitting preview_done");
