@@ -1,5 +1,14 @@
 2006-07-20  Marko Anastasov <marko@marko.anastasov.name>
 
+	* examples/book/printing/advanced/examplewindow.h:
+	* examples/book/printing/advanced/previewdialog.cc:
+	* examples/book/printing/advanced/printformoperation.cc:
+	* examples/book/printing/simple/printformoperation.cc:
+	Replaced calls to pango_cairo_* functions with their wrappers;
+	removed some unnecessary comments.
+
+2006-07-20  Marko Anastasov <marko@marko.anastasov.name>
+
 	* gtk/src/widget.hg: Fixed a typo for input_shape_combine_mask(),
 	to wrap the right GTK method.
 
